-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13
-
Component/s: core-libs
-
b27
-
x86
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246766 | 13.0.4 | Martin Doerr | P4 | Resolved | Fixed | b05 |
| JDK-8235576 | 11.0.7 | Martin Doerr | P4 | Resolved | Fixed | b01 |
we see the below assertion about unaligned access on ntintel with the debug build. We see this assertion for quite a while, and only on 32-bit.
It happens in the following tests:
jtreg tests:
langtools/jdk/jshell/ToolProviderTest.java
jck tests:
api/java_util/prefs/Preferences/index.html#ExportNode
api/java_util/prefs/Preferences/index.html#NPETests
api/java_util/prefs/Preferences/index.html#userNodeForPackage
api/javax_sound/midi/Instrument/index.html#getCtor
api/javax_sound/midi/ControllerEventListener/index.html#Listener
Data from the hs_err file:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (e:\...\jdk11\src\hotspot\share\utilities/copy.hpp:323), pid=10572, tid=10464
# assert(is_aligned(from, alignment)) failed: must be aligned: 0x1857ebbc
#
# JRE version: OpenJDK Runtime Environment (11.0.3) (fastdebug build 11.0.3-internal+0-adhoc.jvmtests.jdk11)
# Java VM: OpenJDK Server VM (fastdebug 11.0.3-internal+0-adhoc.jvmtests.jdk11, mixed mode, emulated-client, g1 gc, windows-x86)
# Core dump will be written. Default location: d:\...\hs_err_pid10572.mdmp
#
Command Line:
-Dtest.src=E:\...\jtreg\jtreg_test_11\test\langtools\jdk\jshell
-Dtest.src.path=E:\...\jtreg\jtreg_test_11\test\langtools\jdk\jshell;E:\...\jtreg\jtreg_test_11\test\langtools\tools\lib
-Dtest.classes=E:\...\jtreg_langtools_work\JTwork\classes\jdk\jshell\ToolProviderTest.d
-Dtest.class.path=E:\...\jtreg_langtools_work\JTwork\classes\jdk\jshell\ToolProviderTest.d;E:\...\jtreg_langtools_work\JTwork\classes\tools\lib
-Dtest.vm.opts=-Djava.awt.headless=true
-Djava.util.prefs.userRoot=e:\...\jtreg_langtools_work\tmp
-Djava.io.tmpdir=e:\...\jtreg_langtools_work\tmp
-ea
-esa
-Dtest.tool.vm.opts=-J-Djava.awt.headless=true
-J-Djava.util.prefs.userRoot=e:\...\jtreg_langtools_work\tmp
-J-Djava.io.tmpdir=e:\...\jtreg_langtools_work\tmp
-J-ea
-J-esa
-Dtest.compiler.opts=
-Dtest.java.opts=-Dhttp.proxyHost=proxy
-Dhttp.proxyPort=8080
-Dhttps.proxyHost=proxy
-Dhttps.proxyPort=8080
-Dhttp.nonProxyHosts=localhost|127.0.0.1|10.*|*.sap.corp|*.wdf.sap.corp
-Dtest.jdk=e:\...\jdk11
-Dcompile.jdk=e:\...\jdk11
-Dtest.timeout.factor=6.0
-Dtest.root=E:\...\jtreg\jtreg_test_11\test\langtools
-Dtest.modules=jdk.compiler/com.sun.tools.javac.api
jdk.compiler/com.sun.tools.javac.main
jdk.jdeps/com.sun.tools.javap
jdk.jshell/jdk.internal.jshell.tool
-Dtest.nativepath=e:\...\jtreg\jtreg_test_11\test\jdk\jtreg\native
--add-modules=jdk.compiler,jdk.jdeps,jdk.jshell
--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
--add-exports=jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
--add-exports=jdk.jshell/jdk.internal.jshell.tool=ALL-UNNAMED
-Djava.awt.headless=true
-Djava.util.prefs.userRoot=e:\...\jtreg_langtools_work\tmp
-Djava.io.tmpdir=e:\...\jtreg_langtools_work\tmp
-ea
-esa
-Dhttp.proxyHost=proxy
-Dhttp.proxyPort=8080
-Dhttp.nonProxyHosts=localhost|127.0.0.1|10.*|*.sap.corp|*.wdf.sap.corp
-Djava.library.path=e:\...\jtreg\jtreg_test_11\test\jdk\jtreg\native
com.sun.javatest.regtest.agent.MainWrapper
E:\...\jtreg_langtools_work\JTwork\jdk\jshell\ToolProviderTest.d\testng.2.jta
jdk/jshell/ToolProviderTest.java
false
ToolProviderTest
Host: ..., Intel(R) Xeon(R) CPU E7- 4870 @ 2.40GHz, 8 cores, 15G, Windows Server 2012 R2 , 64 bit Build 9600 (6.3.9600.17415)
Time: Fri Mar 08 02:27:26 2019 W. Europe Standard Time elapsed time: 1 seconds (0d 0h 0m 1s)
Stack: [0x25e80000,0x25ed0000], sp=0x25ece114, free space=312k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x92e019] VMError::report_and_die+0x5c9 (vmerror.cpp:1468)
V [jvm.dll+0x92e528] VMError::report_and_die+0x28 (vmerror.cpp:1292)
V [jvm.dll+0x3cd90a] report_vm_error+0x4a (debug.cpp:231)
V [jvm.dll+0xac10] Copy::assert_params_ok+0x90 (copy.hpp:323)
V [jvm.dll+0xacd0] AccessInternal::arraycopy_conjoint_atomic<__int64>+0x10 (accessbackend.cpp:144)
V [jvm.dll+0x5b84b2] ArrayAccess<0>::arraycopy_from_native<double>+0x52 (access.hpp:329)
V [jvm.dll+0x5b2783] jni_SetLongArrayRegion+0x213 (jni.cpp:2915)
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.util.prefs.WindowsPreferences.WindowsRegOpenKey(J[BI)[J+0 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.WindowsRegOpenKey1(J[BI)[J+3 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.openKey([BII)J+14 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.openKey(II)J+7 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.<init>(Ljava/util/prefs/WindowsPreferences;Ljava/lang/String;)V+15 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.childSpi(Ljava/lang/String;)Ljava/util/prefs/AbstractPreferences;+6 java.prefs@11.0.3-internal
j java.util.prefs.AbstractPreferences.node(Ljava/util/StringTokenizer;)Ljava/util/prefs/Preferences;+76 java.prefs@11.0.3-internal
j java.util.prefs.AbstractPreferences.node(Ljava/lang/String;)Ljava/util/prefs/Preferences;+75 java.prefs@11.0.3-internal
j jdk.internal.jshell.tool.JShellToolBuilder.rawTool()Ljdk/internal/jshell/tool/JShellTool;+17 jdk.jshell@11.0.3-internal
j jdk.internal.jshell.tool.JShellToolBuilder.start([Ljava/lang/String;)I+1 jdk.jshell@11.0.3-internal
j jdk.internal.jshell.tool.JShellToolProvider.run(Ljava/io/InputStream;Ljava/io/OutputStream;Ljava/io/OutputStream;[Ljava/lang/String;)I+108 jdk.jshell@11.0.3-internal
j ToolProviderTest.runShell([Ljava/lang/String;)I+61
...
It happens in the following tests:
jtreg tests:
langtools/jdk/jshell/ToolProviderTest.java
jck tests:
api/java_util/prefs/Preferences/index.html#ExportNode
api/java_util/prefs/Preferences/index.html#NPETests
api/java_util/prefs/Preferences/index.html#userNodeForPackage
api/javax_sound/midi/Instrument/index.html#getCtor
api/javax_sound/midi/ControllerEventListener/index.html#Listener
Data from the hs_err file:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (e:\...\jdk11\src\hotspot\share\utilities/copy.hpp:323), pid=10572, tid=10464
# assert(is_aligned(from, alignment)) failed: must be aligned: 0x1857ebbc
#
# JRE version: OpenJDK Runtime Environment (11.0.3) (fastdebug build 11.0.3-internal+0-adhoc.jvmtests.jdk11)
# Java VM: OpenJDK Server VM (fastdebug 11.0.3-internal+0-adhoc.jvmtests.jdk11, mixed mode, emulated-client, g1 gc, windows-x86)
# Core dump will be written. Default location: d:\...\hs_err_pid10572.mdmp
#
Command Line:
-Dtest.src=E:\...\jtreg\jtreg_test_11\test\langtools\jdk\jshell
-Dtest.src.path=E:\...\jtreg\jtreg_test_11\test\langtools\jdk\jshell;E:\...\jtreg\jtreg_test_11\test\langtools\tools\lib
-Dtest.classes=E:\...\jtreg_langtools_work\JTwork\classes\jdk\jshell\ToolProviderTest.d
-Dtest.class.path=E:\...\jtreg_langtools_work\JTwork\classes\jdk\jshell\ToolProviderTest.d;E:\...\jtreg_langtools_work\JTwork\classes\tools\lib
-Dtest.vm.opts=-Djava.awt.headless=true
-Djava.util.prefs.userRoot=e:\...\jtreg_langtools_work\tmp
-Djava.io.tmpdir=e:\...\jtreg_langtools_work\tmp
-ea
-esa
-Dtest.tool.vm.opts=-J-Djava.awt.headless=true
-J-Djava.util.prefs.userRoot=e:\...\jtreg_langtools_work\tmp
-J-Djava.io.tmpdir=e:\...\jtreg_langtools_work\tmp
-J-ea
-J-esa
-Dtest.compiler.opts=
-Dtest.java.opts=-Dhttp.proxyHost=proxy
-Dhttp.proxyPort=8080
-Dhttps.proxyHost=proxy
-Dhttps.proxyPort=8080
-Dhttp.nonProxyHosts=localhost|127.0.0.1|10.*|*.sap.corp|*.wdf.sap.corp
-Dtest.jdk=e:\...\jdk11
-Dcompile.jdk=e:\...\jdk11
-Dtest.timeout.factor=6.0
-Dtest.root=E:\...\jtreg\jtreg_test_11\test\langtools
-Dtest.modules=jdk.compiler/com.sun.tools.javac.api
jdk.compiler/com.sun.tools.javac.main
jdk.jdeps/com.sun.tools.javap
jdk.jshell/jdk.internal.jshell.tool
-Dtest.nativepath=e:\...\jtreg\jtreg_test_11\test\jdk\jtreg\native
--add-modules=jdk.compiler,jdk.jdeps,jdk.jshell
--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
--add-exports=jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
--add-exports=jdk.jshell/jdk.internal.jshell.tool=ALL-UNNAMED
-Djava.awt.headless=true
-Djava.util.prefs.userRoot=e:\...\jtreg_langtools_work\tmp
-Djava.io.tmpdir=e:\...\jtreg_langtools_work\tmp
-ea
-esa
-Dhttp.proxyHost=proxy
-Dhttp.proxyPort=8080
-Dhttp.nonProxyHosts=localhost|127.0.0.1|10.*|*.sap.corp|*.wdf.sap.corp
-Djava.library.path=e:\...\jtreg\jtreg_test_11\test\jdk\jtreg\native
com.sun.javatest.regtest.agent.MainWrapper
E:\...\jtreg_langtools_work\JTwork\jdk\jshell\ToolProviderTest.d\testng.2.jta
jdk/jshell/ToolProviderTest.java
false
ToolProviderTest
Host: ..., Intel(R) Xeon(R) CPU E7- 4870 @ 2.40GHz, 8 cores, 15G, Windows Server 2012 R2 , 64 bit Build 9600 (6.3.9600.17415)
Time: Fri Mar 08 02:27:26 2019 W. Europe Standard Time elapsed time: 1 seconds (0d 0h 0m 1s)
Stack: [0x25e80000,0x25ed0000], sp=0x25ece114, free space=312k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x92e019] VMError::report_and_die+0x5c9 (vmerror.cpp:1468)
V [jvm.dll+0x92e528] VMError::report_and_die+0x28 (vmerror.cpp:1292)
V [jvm.dll+0x3cd90a] report_vm_error+0x4a (debug.cpp:231)
V [jvm.dll+0xac10] Copy::assert_params_ok+0x90 (copy.hpp:323)
V [jvm.dll+0xacd0] AccessInternal::arraycopy_conjoint_atomic<__int64>+0x10 (accessbackend.cpp:144)
V [jvm.dll+0x5b84b2] ArrayAccess<0>::arraycopy_from_native<double>+0x52 (access.hpp:329)
V [jvm.dll+0x5b2783] jni_SetLongArrayRegion+0x213 (jni.cpp:2915)
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.util.prefs.WindowsPreferences.WindowsRegOpenKey(J[BI)[J+0 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.WindowsRegOpenKey1(J[BI)[J+3 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.openKey([BII)J+14 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.openKey(II)J+7 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.<init>(Ljava/util/prefs/WindowsPreferences;Ljava/lang/String;)V+15 java.prefs@11.0.3-internal
j java.util.prefs.WindowsPreferences.childSpi(Ljava/lang/String;)Ljava/util/prefs/AbstractPreferences;+6 java.prefs@11.0.3-internal
j java.util.prefs.AbstractPreferences.node(Ljava/util/StringTokenizer;)Ljava/util/prefs/Preferences;+76 java.prefs@11.0.3-internal
j java.util.prefs.AbstractPreferences.node(Ljava/lang/String;)Ljava/util/prefs/Preferences;+75 java.prefs@11.0.3-internal
j jdk.internal.jshell.tool.JShellToolBuilder.rawTool()Ljdk/internal/jshell/tool/JShellTool;+17 jdk.jshell@11.0.3-internal
j jdk.internal.jshell.tool.JShellToolBuilder.start([Ljava/lang/String;)I+1 jdk.jshell@11.0.3-internal
j jdk.internal.jshell.tool.JShellToolProvider.run(Ljava/io/InputStream;Ljava/io/OutputStream;Ljava/io/OutputStream;[Ljava/lang/String;)I+108 jdk.jshell@11.0.3-internal
j ToolProviderTest.runShell([Ljava/lang/String;)I+61
...
- backported by
-
JDK-8235576 [ntintel] asserts about copying unaligned array
-
- Resolved
-
-
JDK-8246766 [ntintel] asserts about copying unaligned array
-
- Resolved
-
- is cloned by
-
JDK-8239856 [ntintel] asserts about copying unaligned array element
-
- Resolved
-