8220348: [ntintel] asserts about copying unaligned array

Reviewed-by: clanger, stuefe